# aoxo.me

./: .env  .gitattributes  .gitignore  Cargo.toml  Certificates.p12  Course.bsdesign  Inicio.bsdesign  Login.bsdesign  aoxo.me.csr  aoxo_me.ca-bundle  justfile  temporal.txt
aoxo_me/: aoxo_me.crt  aoxo_me.p7b
core/: cache_middleware.rs  handlers.rs  lib.rs  models.rs  pool.rs  redirect.rs  schema.rs  sessions.rs  ssl.rs  statics.rs
private/: index.html
public/: css  index.html  p
public/assets/css/: styles.min.css
public/curso/: index.html
public/home/: index.html
public/login/: index.html
public/login/assets/css/: styles.min.css
public/register/: index.html
src/: guard.rs  main.rs
