[package]
name = "aoxo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
path = "core/lib.rs"

[[bin]]
name = "aoxo"
path = "src/main.rs"

[[bin]]
name = "guard"
path = "src/guard.rs"

[dependencies]
actix = "0.12.0"

# Forces requests to be https --disabled until official update
actix-web-middleware-redirect-scheme = { version = "4.0.0", path = "/Users/alejandro/CLionProjects/actix-web-middleware-redirect-scheme" }

# Used to generate cookie strings
rand = "0.8.4"
time = "0.3.5"
regex = "1.5.4"
futures = "0.3.19"

actix-web= {version =  "4.0.0-beta.19", features = ["rustls"] }
actix-service = "2.0.2"
actix-session = "0.5.0-beta.7"

# To serve files automatically
actix-files = "0.6.0-beta.13"
rustls = "0.20.2"
rustls-pemfile = "0.2.1"

# To make objects from json to data rust types
serde="1.0.133"
serde_json = "1.0.74"

# To communicate to db
diesel = { version="1.4.8", features = ["postgres", "r2d2"]}
# To create pool of connections
r2d2 = "0.8.9"
# To have .env file and retrieve it
dotenv = "0.15.0"

# To have global variables
lazy_static = "1.4.0"

