[package]
name = "aoxo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
path = "core/lib.rs"

[[bin]]
name = "aoxo"
path = "src/main.rs"

[[bin]]
name = "guard"
path = "src/guard.rs"

[dependencies]
actix = "0.12.0"

# Forces requests to be https --disabled until official update
actix-web-middleware-redirect-scheme = { version = "4.0.0", git = "https://github.com/AOx0/actix-web-middleware-redirect-scheme" }

# Used to generate cookie strings
rand = "0.8.5"
time = "0.3.7"
regex = "1.5.4"
futures = "0.3.21"

actix-web= {version =  "4.0.1", features = ["rustls"] }
actix-service = "2.0.2"
actix-session = "0.5.0-beta.8"

# To serve files automatically
actix-files = "0.6.0"
rustls = "0.20.4"
rustls-pemfile = "0.3.0"

# To make objects from json to data rust types
serde= {version="1.0.136", features= ["serde_derive"]}
serde_json = "1.0.79"

# To communicate to db
diesel = { version="1.4.8", features = ["postgres", "r2d2"]}
# To create pool of connections
r2d2 = "0.8.9"
# To have .env file and retrieve it
dotenv = "0.15.0"

# To have global variables
lazy_static = "1.4.0"

